[gd_scene load_steps=8 format=2]

[ext_resource path="res://fonts/prstartk.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://sprites/skull_table_spr_0.png" type="Texture" id=2]
[ext_resource path="res://scenes/BonFireDialog.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=2]
resource_local_to_scene = true
size = 24
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 1 )

[node name="BonFireDialog" type="Node2D"]
position = Vector2( -283, 129 )
script = ExtResource( 3 )

[node name="ColorRect2" type="ColorRect" parent="."]
margin_left = -204.0
margin_top = -312.0
margin_right = 223.0
margin_bottom = -116.0

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -203.0
margin_top = -310.0
margin_right = 222.0
margin_bottom = -117.0
color = Color( 0, 0, 0, 1 )

[node name="Label" type="Label" parent="."]
margin_left = -200.0
margin_top = -292.0
margin_right = 225.0
margin_bottom = -268.0
custom_fonts/font = SubResource( 2 )
text = "Wanna Sleep?"
align = 1

[node name="Button" type="Button" parent="."]
margin_left = -173.0
margin_top = -145.5
margin_right = 6.0
margin_bottom = -123.5
custom_fonts/font = SubResource( 3 )
text = "OK"

[node name="Button2" type="Button" parent="."]
margin_left = 10.0
margin_top = -145.5
margin_right = 189.0
margin_bottom = -123.5
custom_fonts/font = SubResource( 4 )
text = "Cancel"

[node name="SkullTableSpr0" type="Sprite" parent="."]
position = Vector2( -168, -302.5 )
scale = Vector2( 1.78125, 1.78125 )
texture = ExtResource( 2 )

[node name="SkullTableSpr1" type="Sprite" parent="."]
position = Vector2( 187, -302.5 )
rotation = 3.14159
scale = Vector2( 1.781, -1.781 )
texture = ExtResource( 2 )

[node name="Label2" type="Label" parent="."]
margin_left = -197.0
margin_top = -237.0
margin_right = 219.0
margin_bottom = -153.0
custom_fonts/font = SubResource( 5 )
text = "Will reset your extra hearts and fast travel to  main hall.
You keep everything else."
align = 1
autowrap = true

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
